<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.ffalcinelli</groupId>
    <artifactId>jdivert</artifactId>
    <version>3.0.0</version>
    <packaging>jar</packaging>

    <name>jdivert</name>
    <description>A Java binding to WinDivert driver</description>
    <url>https://github.com/ffalcinelli/jdivert</url>

    <licenses>
        <license>
            <name>GNU Lesser General Public License 3</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.html</url>
        </license>
        <license>
            <name>GNU General Public License v2.0</name>
            <url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>ffalcinelli</id>
            <name>Fabio Falcinelli</name>
            <email>fabio.falcinelli@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/ffalcinelli/jdivert.git</connection>
        <developerConnection>scm:git:https://github.com/ffalcinelli/jdivert.git</developerConnection>
        <url>https://github.com/ffalcinelli/jdivert</url>
    </scm>

    <properties>
        <central.publishing.maven.plugin.version>0.10.0</central.publishing.maven.plugin.version>
        <jacoco.version>0.8.14</jacoco.version>
        <jacoco.exclude.pattern>**/META-INF/versions/**/NativeAdapterFactory.class</jacoco.exclude.pattern>
        <jna.version>5.18.0</jna.version>
        <junit.version>5.14.3</junit.version>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <maven.compiler.release>8</maven.compiler.release>
        <maven.gpg.plugin.version>3.2.7</maven.gpg.plugin.version>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <windivert.version>2.2.2</windivert.version>
        <ebpfdivert.version>0.0.4</ebpfdivert.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${jna.version}</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>${jna.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/*.properties</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>${project.build.directory}/native-resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>1.9.0</version>
                <executions>
                    <execution>
                        <id>download-windivert</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>https://github.com/basil00/WinDivert/releases/download/v${windivert.version}/WinDivert-${windivert.version}-A.zip</url>
                            <unpack>true</unpack>
                            <outputDirectory>${project.build.directory}/windivert</outputDirectory>
                            <readTimeOut>60000</readTimeOut>
                            <connectTimeOut>60000</connectTimeOut>
                        </configuration>
                    </execution>
                    <execution>
                        <id>download-ebpfdivert</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>https://github.com/ffalcinelli/ebpfdivert/releases/download/v${ebpfdivert.version}/ebpfdivert-v${ebpfdivert.version}-linux-amd64.tar.gz</url>
                            <unpack>true</unpack>
                            <outputDirectory>${project.build.directory}/ebpfdivert</outputDirectory>
                            <readTimeOut>60000</readTimeOut>
                            <connectTimeOut>60000</connectTimeOut>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-native-binaries</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/native-resources"/>
                                <copy file="${project.build.directory}/windivert/WinDivert-${windivert.version}-A/x64/WinDivert.dll"
                                      tofile="${project.build.directory}/native-resources/WinDivert64.dll"
                                      failonerror="false"/>
                                <copy file="${project.build.directory}/windivert/WinDivert-${windivert.version}-A/x64/WinDivert64.sys"
                                      tofile="${project.build.directory}/native-resources/WinDivert64.sys"
                                      failonerror="false"/>
                                <copy file="${project.build.directory}/ebpfdivert/lib/ebpfdivert/ebpfdivert.bpf.o"
                                      todir="${project.build.directory}/native-resources"
                                      failonerror="false"/>

                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <jna.nosys>true</jna.nosys>
                    </systemPropertyVariables>
                    <argLine>-Xmx256m @{argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>${jacoco.exclude.pattern}</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <outputDirectory>${project.basedir}/docs/api</outputDirectory>
                    <sourcepath>${project.build.sourceDirectory}</sourcepath>
                    <release>${maven.compiler.release}</release>
                    <detectJavaApiLink>false</detectJavaApiLink>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java22</id>
            <activation>
                <jdk>[22,)</jdk>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>3.6.0</version>
                        <executions>
                            <execution>
                                <id>add-source-java22</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>${project.basedir}/src/main/java22</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>default-compile</id>
                                <configuration>
                                    <excludes>
                                        <exclude>com/github/ffalcinelli/jdivert/windivert/WinDivertPanamaNativeAdapter.java</exclude>
                                        <exclude>com/github/ffalcinelli/jdivert/ebpfdivert/EBPFDivertPanamaNativeAdapter.java</exclude>
                                        <exclude>com/github/ffalcinelli/jdivert/ebpfdivert/panama/**</exclude>
                                    </excludes>
                                </configuration>
                            </execution>
                            <execution>
                                <id>compile-java-22</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <configuration>
                                    <release>22</release>
                                    <compileSourceRoots>
                                        <sourcePath>${project.basedir}/src/main/java22</sourcePath>
                                    </compileSourceRoots>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>report</id>
                                <configuration>
                                    <sourceDirectories>
                                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                                        <sourceDirectory>${project.basedir}/src/main/java22</sourceDirectory>
                                    </sourceDirectories>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven.gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>${central.publishing.maven.plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>sonatype-central</publishingServerId>
                            <autoPublish>true</autoPublish>
                            <waitUntil>published</waitUntil>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
